small spacing fix

--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -11,6 +11,7 @@
 
     .homepage-column {
         position: relative;
+        margin-bottom: 60px;
 
         &:first-child {
             margin-left: 0;
